// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RFC Dropdown creator with custom options renders to snapshot 1`] = `
<div>
  <section
    class="pnotify__reason-for-change"
  >
    <div
      class="form-group"
    >
      <label
        for="reasons_for_change_select"
      >
        Reason for change
      </label>
      <select
        class="form-control"
        id="reasons_for_change_select"
        multiple=""
        name="reasons_for_change"
      >
        <option
          label="New label 1"
          value="5"
        >
          New label 1
        </option>
        <option
          data-role="divider"
        />
        <option
          label="Other"
          value="1"
        >
          Other
        </option>
      </select>
    </div>
  </section>
</div>
`;

exports[`RFC Dropdown creator with default options renders to snapshot 1`] = `
<div>
  <section
    class="pnotify__reason-for-change"
  >
    <div
      class="form-group"
    >
      <label
        for="reasons_for_change_select"
      >
        Reason for change
      </label>
      <select
        class="form-control"
        id="reasons_for_change_select"
        multiple=""
        name="reasons_for_change"
      >
        <option
          label="Label 1"
          value="4"
        >
          Label 1
        </option>
        <option
          label="Label 2"
          value="3"
        >
          Label 2
        </option>
        <option
          data-role="divider"
        />
        <option
          label="Other"
          value="1"
        >
          Other
        </option>
      </select>
    </div>
  </section>
</div>
`;
